--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -8,8 +8,8 @@
 
     {#- Uncomment this if you’d like folks to know that you used Eleventy to build your site!  #}
     {#- <meta name="generator" content="{{ eleventy.generator }}"> #}
-<script src="https://unpkg.com/faunadb@2.5.1/dist/faunadb.js"></script>
-<script src="https://unpkg.com/url@0.11.0/url.js"></script>
+<script src="//cdn.jsdelivr.net/npm/faunadb@latest/dist/faunadb.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/js-url/2.5.3/url.js"></script>
 
     <link rel="stylesheet" href="{{ '/css/index.css' | url }}">
     <link rel="stylesheet" href="{{ '/css/prism-base16-monokai.dark.css' | url }}">
