--- a/index.njk
+++ b/index.njk
@@ -24,7 +24,7 @@
 <script>
  function getTotalScore(ids) {
   // Make an HTTP GET request to the server with the ids as a query parameter
-  return fetch(`//tranquil-phoenix-a6c306.netlify.app/js/compute-scores.js?ids=${ids}`)
+  return fetch(`https://tranquil-phoenix-a6c306.netlify.app/js/compute-scores.js?ids=${ids}`)
     .then(response => response.text())
     .then(totalScore => {
       // Update the content of the element with the total score
@@ -42,6 +42,7 @@ document.getElementById('submit-button').addEventListener('click', () => {
 
   // Pass the input values as a comma-separated string to the function
 getTotalScore(`${input1},${input2},${input3},${input4},${input5}`);
+
 });
 
 </script>
