--- a/index.njk
+++ b/index.njk
@@ -1,3 +1,10 @@
+---
+layout: layouts/home.njk
+eleventyNavigation:
+  key: Home
+  order: 1
+---
+
  <form id="form">
     <button id="submit-button" type="submit">Submit</button>
   </form>
