--- a/index.njk
+++ b/index.njk
@@ -26,7 +26,8 @@ button.addEventListener('click', () => {
         const result = document.getElementById('result');
 
         // Set the HTML content of the 'result' element to the response data
-        result.innerHTML = JSON.stringify(data);
+        var nums = JSON.stringify(data);
+        result.innerHTML = nums.allvalues;
       })
     .catch(error => {
       // Log the error message
