--- a/index.njk
+++ b/index.njk
@@ -26,7 +26,9 @@ button.addEventListener('click', () => {
         const result = document.getElementById('result');
 
         // Set the HTML content of the 'result' element to the response data
-        result.innerHTML =  JSON.stringify(data);
+        const d = JSON.stringify(data);
+        result.innerHTML =  d;
+        console.log(d.allvalues);
       })
     .catch(error => {
       // Log the error message
