--- a/index.njk
+++ b/index.njk
@@ -5,13 +5,42 @@ eleventyNavigation:
   order: 1
 ---
 
+<form>
+  <label for="input1">Input 1:</label><br>
+  <input type="text" id="input1" name="input1"><br>
+  <label for="input2">Input 2:</label><br>
+  <input type="text" id="input2" name="input2"><br>
+  <label for="input3">Input 3:</label><br>
+  <input type="text" id="input3" name="input3"><br>
+  <label for="input4">Input 4:</label><br>
+  <input type="text" id="input4" name="input4"><br>
+  <label for="input5">Input 5:</label><br>
+  <input type="text" id="input5" name="input5"><br><br>
+</form> 
+
+
     <button id="button">Submit</button>
 
   <div id="result"></div>
 
   <script>
    // Define the URL of the function
-const url = '/.netlify/functions/lookupcards?values=2,3,7,5,6';
+// Get the input elements
+const input1 = document.getElementById('input1');
+const input2 = document.getElementById('input2');
+const input3 = document.getElementById('input3');
+const input4 = document.getElementById('input4');
+const input5 = document.getElementById('input5');
+
+// Get the values of the inputs
+const value1 = input1.value;
+const value2 = input2.value;
+const value3 = input3.value;
+const value4 = input4.value;
+const value5 = input5.value;
+
+// Build the URL string with the values
+const url = `/.netlify/functions/lookupcards?values=${value1},${value2},${value3},${value4},${value5}`;
 
 // Get the button element
 const button = document.getElementById('button');
