--- a/index.njk
+++ b/index.njk
@@ -6,17 +6,27 @@ eleventyNavigation:
 ---
 
 <form>
-  <label for="input1">Input 1:</label><br>
-  <input type="text" id="input1" name="input1"><br>
-  <label for="input2">Input 2:</label><br>
-  <input type="text" id="input2" name="input2"><br>
-  <label for="input3">Input 3:</label><br>
-  <input type="text" id="input3" name="input3"><br>
-  <label for="input4">Input 4:</label><br>
-  <input type="text" id="input4" name="input4"><br>
-  <label for="input5">Input 5:</label><br>
-  <input type="text" id="input5" name="input5"><br><br>
-</form> 
+  <div id="div1" draggable="true" ondragstart="dragStart(event)">Div 1</div>
+  <div id="div2" draggable="true" ondragstart="dragStart(event)">Div 2</div>
+  <div id="div3" draggable="true" ondragstart="dragStart(event)">Div 3</div>
+  <div id="div4" draggable="true" ondragstart="dragStart(event)">Div 4</div>
+    <div id="div5" draggable="true" ondragstart="dragStart(event)">Div 5</div>
+      <div id="div6" draggable="true" ondragstart="dragStart(event)">Div 6</div>
+        <div id="div7" draggable="true" ondragstart="dragStart(event)">Div 7</div>
+          <div id="div8" draggable="true" ondragstart="dragStart(event)">Div 8</div>
+            <div id="div9" draggable="true" ondragstart="dragStart(event)">Div 9</div>
+  <div id="div10" draggable="true" ondragstart="dragStart(event)">Div 10</div>
+
+  <div id="drop-target-1" ondrop="drop(event)" ondragover="dragOver(event)">Drop Target 1</div>
+  <div id="drop-target-2" ondrop="drop(event)" ondragover="dragOver(event)">Drop Target 2</div>
+  <div id="drop-target-3" ondrop="drop(event)" ondragover="dragOver(event)">Drop Target 3</div>
+  <div id="drop-target-4" ondrop="drop(event)" ondragover="dragOver(event)">Drop Target 4</div>
+  <div id="drop-target-5" ondrop="drop(event)" ondragover="dragOver(event)">Drop Target 5</div>
+
+  <button id="button">Submit</button>
+
+  <div id="result"></div>
+</form>
 
 
     <button id="button">Submit</button>
@@ -24,49 +34,46 @@ eleventyNavigation:
   <div id="result"></div>
 
   <script>
-  
+  function dragStart(event) {
+  event.dataTransfer.setData("id", event.target.id);
+}
 
-// Get the button element
+function dragOver(event) {
+  event.preventDefault();
+}
+
+function drop(event) {
+  event.preventDefault();
+  const id = event.dataTransfer.getData("id");
+  event.target.innerHTML = id;
+}
+
 const button = document.getElementById('button');
 
-// Add a click event listener to the button
 button.addEventListener('click', () => {
+  const dropTarget1 = document.getElementById('drop-target-1');
+  const dropTarget2 = document.getElementById('drop-target-2');
+  const dropTarget3 = document.getElementById('drop-target-3');
+  const dropTarget4 = document.getElementById('drop-target-4');
+  const dropTarget5 = document.getElementById('drop-target-5');
+  const value1 = dropTarget1.innerHTML;
+  const value2 = dropTarget2.innerHTML;
+  const value3 = dropTarget3.innerHTML;
+  const value4 = dropTarget4.innerHTML;
+  const value5 = dropTarget5.innerHTML;
 
-   // Define the URL of the function
-// Get the input elements
-const input1 = document.getElementById('input1');
-const input2 = document.getElementById('input2');
-const input3 = document.getElementById('input3');
-const input4 = document.getElementById('input4');
-const input5 = document.getElementById('input5');
+  const url = `/.netlify/functions/lookupcards?values=${value1},${value2},${value3},${value4},${value5}`;
+  console.log(url);
 
-// Get the values of the inputs
-const value1 = input1.value;
-const value2 = input2.value;
-const value3 = input3.value;
-const value4 = input4.value;
-const value5 = input5.value;
-
-// Build the URL string with the values
-const url = `/.netlify/functions/lookupcards?values=${value1},${value2},${value3},${value4},${value5}`;
-console.log(url);
-
-  // Make a GET request to the function
-  fetch(url)
-    .then(response => response.json())
-     .then(data => {
-        // Get the 'result' element
-        const result = document.getElementById('result');
-
-        // Set the HTML content of the 'result' element to the response data
-        
-        result.innerHTML =  data.allvalues;
-       
-      })
-    .catch(error => {
-      // Log the error message
-      console.error(error);
-    });
+ fetch(url)
+  .then(response => response.json())
+  .then(data => {
+    const result = document.getElementById('result');
+    result.innerHTML = data.allvalues;
+  })
+  .catch(error => {
+    console.error(error);
+  });
 });
 
   </script>
