--- a/index.njk
+++ b/index.njk
@@ -6,16 +6,16 @@ eleventyNavigation:
 ---
 
 <form>
-  <div id="div1" draggable="true" ondragstart="dragStart(event)">Div 1</div>
-  <div id="div2" draggable="true" ondragstart="dragStart(event)">Div 2</div>
-  <div id="div3" draggable="true" ondragstart="dragStart(event)">Div 3</div>
-  <div id="div4" draggable="true" ondragstart="dragStart(event)">Div 4</div>
-    <div id="div5" draggable="true" ondragstart="dragStart(event)">Div 5</div>
-      <div id="div6" draggable="true" ondragstart="dragStart(event)">Div 6</div>
-        <div id="div7" draggable="true" ondragstart="dragStart(event)">Div 7</div>
-          <div id="div8" draggable="true" ondragstart="dragStart(event)">Div 8</div>
-            <div id="div9" draggable="true" ondragstart="dragStart(event)">Div 9</div>
-  <div id="div10" draggable="true" ondragstart="dragStart(event)">Div 10</div>
+  <div id="1" draggable="true" ondragstart="dragStart(event)">Div 1</div>
+  <div id="2" draggable="true" ondragstart="dragStart(event)">Div 2</div>
+  <div id="3" draggable="true" ondragstart="dragStart(event)">Div 3</div>
+  <div id="4" draggable="true" ondragstart="dragStart(event)">Div 4</div>
+    <div id="5" draggable="true" ondragstart="dragStart(event)">Div 5</div>
+      <div id="6" draggable="true" ondragstart="dragStart(event)">Div 6</div>
+        <div id="7" draggable="true" ondragstart="dragStart(event)">Div 7</div>
+          <div id="8" draggable="true" ondragstart="dragStart(event)">Div 8</div>
+            <div id="9" draggable="true" ondragstart="dragStart(event)">Div 9</div>
+  <div id="10" draggable="true" ondragstart="dragStart(event)">Div 10</div>
 
   <div id="drop-target-1" ondrop="drop(event)" ondragover="dragOver(event)">Drop Target 1</div>
   <div id="drop-target-2" ondrop="drop(event)" ondragover="dragOver(event)">Drop Target 2</div>
