--- a/index.njk
+++ b/index.njk
@@ -53,11 +53,11 @@ button.addEventListener('click', () => {
   const dropTarget3 = document.getElementById('drop-target-3');
   const dropTarget4 = document.getElementById('drop-target-4');
   const dropTarget5 = document.getElementById('drop-target-5');
-  const value1 = dropTarget1.innerHTML;
-  const value2 = dropTarget2.innerHTML;
-  const value3 = dropTarget3.innerHTML;
-  const value4 = dropTarget4.innerHTML;
-  const value5 = dropTarget5.innerHTML;
+  const value1 = Number(dropTarget1.innerHTML);
+  const value2 = Number(dropTarget2.innerHTML);
+  const value3 = Number(dropTarget3.innerHTML);
+  const value4 = Number(dropTarget4.innerHTML);
+  const value5 = Number(dropTarget5.innerHTML);
 
   console.log(value1);
 
