--- a/index.njk
+++ b/index.njk
@@ -7,11 +7,11 @@ eleventyNavigation:
   <div id="result"></div>
 
 <div style="display: flex;">
-  <div id="drop-target-1" ondrop="drop(event)" ondragover="dragOver(event)" style="pading:10px;border:5px solid white;background:#ccc"></div>
-  <div id="drop-target-2" ondrop="drop(event)" ondragover="dragOver(event)" style="pading:10px;border:5px solid white;background:#ccc"></div>
-  <div id="drop-target-3" ondrop="drop(event)" ondragover="dragOver(event)" style="pading:10px;border:5px solid white;background:#ccc"></div>
-  <div id="drop-target-4" ondrop="drop(event)" ondragover="dragOver(event)" style="pading:10px;border:5px solid white;background:#ccc"></div>
-  <div id="drop-target-5" ondrop="drop(event)" ondragover="dragOver(event)" style="pading:10px;border:5px solid white;background:#ccc"></div>
+  <div id="drop-target-1" ondrop="drop(event)" ondragover="dragOver(event)" style="padding:10px;border:5px solid white;background:#ccc;width:20px;"></div>
+  <div id="drop-target-2" ondrop="drop(event)" ondragover="dragOver(event)" style="padding:10px;border:5px solid white;background:#ccc;width:20px;"></div>
+  <div id="drop-target-3" ondrop="drop(event)" ondragover="dragOver(event)" style="padding:10px;border:5px solid white;background:#ccc;width:20px;"></div>
+  <div id="drop-target-4" ondrop="drop(event)" ondragover="dragOver(event)" style="padding:10px;border:5px solid white;background:#ccc;width:20px;"></div>
+  <div id="drop-target-5" ondrop="drop(event)" ondragover="dragOver(event)" style="padding:10px;border:5px solid white;background:#ccc;width:20px;"></div>
 </div>
 
 <form>
