--- a/index.njk
+++ b/index.njk
@@ -1,4 +1,5 @@
 <form>
+  <div style="display:flex">
   <input type="checkbox" id="checkbox1" name="checkbox1" value="1">
   <label for="checkbox1">1</label><br>
   <input type="checkbox" id="checkbox2" name="checkbox2" value="2">
@@ -9,7 +10,20 @@
   <label for="checkbox4">4</label><br>
   <input type="checkbox" id="checkbox5" name="checkbox5" value="5">
   <label for="checkbox5">5</label><br>
-  <!-- Add more checkboxes for values 6 to 20 -->
+</div>
+
+<div style="display:flex">
+  <input type="checkbox" id="checkbox6" name="checkbox1" value="6">
+  <label for="checkbox6">1</label><br>
+  <input type="checkbox" id="checkbox7" name="checkbox2" value="7">
+  <label for="checkbox7">2</label><br>
+  <input type="checkbox" id="checkbox8" name="checkbox3" value="8">
+  <label for="checkbox8">3</label><br>
+  <input type="checkbox" id="checkbox9" name="checkbox4" value="9">
+  <label for="checkbox9">4</label><br>
+  <input type="checkbox" id="checkbox10" name="checkbox5" value="10">
+  <label for="checkbox10">5</label><br>
+</div>
 </form> 
 
 <button id="button">Submit</button>
